# sopwith

./: .gitignore  configure.ac
mac/: config.h
mac/sopwith.xcodeproj/: project.pbxproj
msvc/: sopwith.vcproj
src/: Makefile.am  font.h  pcsound.h  std.h  sw.h  swasynio.c  swasynio.cpp  swasynio.h  swauto.c  swauto.cpp  swauto.h  swcollsn.c  swcollsn.cpp  swcollsn.h  swconf.c  swconf.cpp  swconf.h  swdisp.c  swdisp.cpp  swdisp.h  swend.c  swend.cpp  swend.h  swgames.cpp  swgames.h  swground.cpp  swground.h  swgrpha.c  swgrpha.cpp  swgrpha.h  swinit.c  swinit.cpp  swinit.h  swmain.c  swmain.cpp  swmain.h  swmove.c  swmove.cpp  swmove.h  swobject.c  (+29 more)
src/dos/: timer.c
src/gtk/: main.c  pcsound.c  timer.c  video.c
src/sdl/: Makefile.am  main.c  pcsound.c  pcsound.cpp  tcpcomm.c  timer.cpp  video.c  video.cpp
